[package]
name = "metaanalysiscalculator"
version = "0.1.0"
authors = ["Shane Feek <shane.feek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.3", features = ["fltk-bundled"] }
statrs = "0.15.0"
